--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url(../img/header_background.jpg);
   background-position: center;
   z-index: -1; }
 
@@ -182,8 +182,8 @@ header {
   background-image: url(../img/step_3.jpg); }
 
 .step__gradient {
-  width: 298px;
-  height: 238px;
+  width: 300px;
+  height: 240px;
   background: rgba(48, 48, 48, 0.13);
   background: -moz-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(48, 48, 48, 0.13)), color-stop(0%, rgba(48, 48, 48, 0.13)), color-stop(100%, rgba(13, 12, 13, 0.7)));
@@ -192,9 +192,7 @@ header {
   background: -ms-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
-  border-radius: 1px solid white;
-  border-radius: 5px;
-  behavior: url(PIE/PIE.htc); }
+  border-radius: 5px; }
 
 .step__link {
   display: block;
@@ -237,7 +235,8 @@ header {
   height: 120px;
   width: 120px;
   background-image: url(../img/parthner_1.jpg);
-  border-radius: 50%; }
+  border-radius: 50%;
+  behavior: url(PIE/PIE.htc); }
 
 .parthner__icon {
   display: block;
