--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
   z-index: -1; }
 
@@ -172,8 +172,7 @@ header {
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
-  border-radius: 5px;
-  behavior: url(PIE/PIE.htc); }
+  border-radius: 5px; }
 
 .step--2 {
   background-image: url(../img/step_2.jpg); }
@@ -208,7 +207,8 @@ header {
   line-height: 22px;
   font-size: 10px;
   letter-spacing: 1.7px;
-  border-radius: 20px; }
+  border-radius: 20px;
+  behavior: url(PIE/PIE.htc); }
 
 .step__title {
   margin-top: 16px;
