--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url("../img/header_background.jpg");
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
   z-index: -1;
 }
@@ -401,7 +401,6 @@ header {
   background-image: url("../img/step_1.jpg");
   background-position: center;
   border-radius: 5px;
-  behavior: url("PIE/PIE.htc");
 }
 
 .step--2 {
@@ -441,6 +440,7 @@ header {
   font-size: 10px;
   letter-spacing: 1.7px;
   border-radius: 20px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step__title {
