--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url("../img/header_background.jpg");
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
   z-index: -1;
 }
@@ -401,6 +401,7 @@ header {
   background-image: url("../img/step_1.jpg");
   background-position: center;
   border-radius: 5px;
+  z-index: -1;
 }
 
 .step--2 {
@@ -424,6 +425,7 @@ header {
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   border-radius: 5px;
+  z-index: -1;
 }
 
 .step__link {
