--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url("../img/header_background.jpg");
   background-position: center;
   z-index: -1;
 }
@@ -545,6 +545,7 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
+  behavior: url("PIE/PIE.htc");
   font-family: "Montserrat-Bold";
   font-size: 14px;
   letter-spacing: -0.5px;
