--- a/GoIT/test/EXAM/src/styles/partials/font.css
+++ b/GoIT/test/EXAM/src/styles/partials/font.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Montserrat-Bold';
     src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
-    src: url('../fonts/Montserrat-Bold.woff') format('woff');
+    src: url('../fonts/Montserrat-Bold.eot') format('eot');
 }
 
 @font-face {
