--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -132,7 +132,7 @@ table {
 @font-face {
   font-family: 'Montserrat-Bold';
   src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
-  src: url("../fonts/Montserrat-Bold.woff") format('woff');
+  src: url("../fonts/Montserrat-Bold.eot") format('eot');
 }
 
 @font-face {
