--- a/GoIT/test/EXAM/src/styles/partials/font.css
+++ b/GoIT/test/EXAM/src/styles/partials/font.css
@@ -1,7 +1,14 @@
 @font-face {
     font-family: 'Montserrat-Bold';
     src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
-    src: url('../fonts/Montserrat-Bold.eot') format('eot');
+    src: url('../fonts/Montserrat-Bold.eot');
+    src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype');
+}
+
+@font-face {
+    font-family: 'MyWebFont';
+    src: url('fonts/MyWebFont-Light-webfont.eot');
+    src: url('fonts/MyWebFont-Light-webfont.eot?#iefix') format('embedded-opentype');
 }
 
 @font-face {
