--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -137,74 +137,10 @@ table {
 }
 
 @font-face {
-  font-family: 'MyWebFont';
-  src: url("fonts/MyWebFont-Light-webfont.eot");
-  src: url("fonts/MyWebFont-Light-webfont.eot?#iefix") format('embedded-opentype');
-}
-
-@font-face {
-  font-family: 'Montserrat-Regular';
-  src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Black';
-  src: url("../fonts/Roboto-Black.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-BlackItalic';
-  src: url("../fonts/Roboto-BlackItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Bold';
-  src: url("../fonts/Roboto-Bold.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-BoldItalic';
-  src: url("../fonts/Roboto-BoldItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Italic';
-  src: url("../fonts/Roboto-Italic.ttf") format('truetype');
-}
-
-@font-face {
   font-family: 'Roboto-Light';
   src: url("../fonts/Roboto-Light.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-LightItalic';
-  src: url("../fonts/Roboto-LightItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Medium';
-  src: url("../fonts/Roboto-Medium.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-MediumItalic';
-  src: url("../fonts/Roboto-MediumItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Regular';
-  src: url("../fonts/Roboto-Regular.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Thin';
-  src: url("../fonts/Roboto-Thin.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-ThinItalic';
-  src: url("../fonts/Roboto-ThinItalic.ttf") format('truetype');
+  src: url("../fonts/Roboto-Light.eot");
+  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype');
 }
 @charset "UTF-8";
 
