--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -131,16 +131,14 @@ table {
 }
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url("../fonts/Montserrat-Bold.eot");
-  src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
-  src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
+  src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype'),
+         url("../fonts/Montserrat-Bold.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto-Light';
-  src: url("../fonts/Roboto-Light.eot");
-  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype');
-  src: url("../fonts/Roboto-Light.ttf") format('truetype');
+  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype'),
+         url("../fonts/Roboto-Light.ttf") format('truetype');
 }
 @charset "UTF-8";
 
