--- a/GoIT/javascript/EXAM/src/styles/partials/style.scss
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.scss
@@ -1,7 +1,9 @@
 $montBold:     'Montserrat-Bold';
 $robLigt:      'Roboto-Light';
-$montBold-ie8: 'Montserrat-Bold-ie8';
-$robLigt-ie8:  'Roboto-Light-ie8';
+$montReg:      'Montserrat-Regular';
+$montBold_ie8: 'Montserrat-Bold-ie8';
+$robLigt_ie8:  'Roboto-Light-ie8';
+$montReg_ie8:  'Montserrat-Regular-ie8';
 
 /*CLEARFIX*/
 .clearfix{
@@ -51,7 +53,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -73,7 +75,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -84,7 +86,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   color: white;
 }
 h3 {
@@ -94,7 +96,7 @@ h3 {
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: $robLigt, $robLigt-ie8;  
+  font-family: $robLigt_ie8, $robLigt;  
   line-height: 20px;
 }
 .find__link{
@@ -107,7 +109,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: $montBold, $montBold-ie8; 
+  font-family: $montBold_ie8, $montBold;
   font-size: 13px;
   -moz-border-radius: 20px; /* Firefox */
   -webkit-border-radius: 20px; /* Safari, Chrome */
@@ -121,7 +123,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -195,7 +197,7 @@ h3 {
   background-color: #ff4e50;
   color: white;
   text-align: center;
-  font-family: 'Montserrat-Regular';
+  font-family: $montReg_ie8, $montReg;
   line-height: 22px;
   font-size: 10px;
   letter-spacing: 1.7px;
@@ -206,7 +208,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   color: white;
   line-height: 28px;
 }
@@ -215,7 +217,7 @@ h3 {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: $robLigt, $robLigt-ie8;
+  font-family: $robLigt_ie8, $robLigt;
   font-size: 14px;
   line-height: 17px;
 }
@@ -246,7 +248,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
 }
 .parthner__feedback{
   width: 220px;
@@ -254,7 +256,7 @@ h3 {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: $robLigt, $robLigt-ie8;
+  font-family: $robLigt_ie8, $robLigt;
   text-align: center;
   color: #989898;
 }
@@ -288,7 +290,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -333,7 +335,7 @@ h3 {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center; 
-  font-family: $robLigt, $robLigt-ie8;
+  font-family: $robLigt_ie8, $robLigt;
   font-size: 18px;
 }
 .holiday__input__text{
@@ -346,7 +348,7 @@ h3 {
 
   border: 1px solid #dcdcdc; 
   padding-left: 15px;
-  font-family: $robLigt, $robLigt-ie8;
+  font-family: $robLigt_ie8, $robLigt;
   font-size: 14px;
 }
 .find__link--2{
@@ -361,14 +363,14 @@ footer{
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   color: #ff4e50;
   letter-spacing: 1px;
 }
 .menu__caption{
   margin-top: 15px;
   text-align: center;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   font-size: 14px;
 }
 .menu{
@@ -385,7 +387,7 @@ footer{
 }
 .menu__link{
   text-decoration:none;
-  font-family: $robLigt, $robLigt-ie8;
+  font-family: $robLigt_ie8, $robLigt;
   font-size: 14px;
   color: #989898;
   &:hover{
@@ -394,7 +396,7 @@ footer{
 }
 .designed{
   margin-top: 16px;
-  font-family: $montBold, $montBold-ie8;
+  font-family: $montBold_ie8, $montBold;
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
