--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -1,7 +1,5 @@
-$montBold:     'Montserrat-Bold';
-$robLigt:      'Roboto-Light';
-$montReg:      'Montserrat-Regular';
-$montGoogle:   'Montserrat';
+$montBold:     'Montserrat', 'Montserrat-Bold';
+$robLigt:      'Roboto', 'Roboto-Light';
 
 /*CLEARFIX*/
 .clearfix{
@@ -51,7 +49,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: $montGoogle;
+  font-family: $montBold;
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -73,7 +71,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: $montGoogle;
+  font-family: $montBold;
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -84,7 +82,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: $montGoogle;
+  font-family: $montBold;
   color: white;
 }
 h3 {
@@ -107,7 +105,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: $montGoogle;
+  font-family: $montBold;
   font-size: 13px;
   -moz-border-radius: 20px; /* Firefox */
   -webkit-border-radius: 20px; /* Safari, Chrome */
@@ -121,7 +119,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: $montGoogle;
+  font-family: $montBold;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -195,9 +193,10 @@ h3 {
   background-color: #ff4e50;
   color: white;
   text-align: center;
-  font-family: $montReg;
-  line-height: 22px;
+  font-family: $montBold;
+  font-weight: 400;
   font-size: 10px;
+  line-height: 22px;
   letter-spacing: 1.7px;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
@@ -206,7 +205,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: $montGoogle;
+  font-family: $montBold;
   color: white;
   line-height: 28px;
 }
@@ -246,7 +245,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: $montGoogle;
+  font-family: $montBold;
 }
 .parthner__feedback{
   width: 220px;
@@ -288,7 +287,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: $montGoogle;
+  font-family: $montBold;
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -361,14 +360,14 @@ footer{
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: $montGoogle;
+  font-family: $montBold;
   color: #ff4e50;
   letter-spacing: 1px;
 }
 .menu__caption{
   margin-top: 15px;
   text-align: center;
-  font-family: $montGoogle;
+  font-family: $montBold;
   font-size: 14px;
 }
 .menu{
@@ -394,7 +393,7 @@ footer{
 }
 .designed{
   margin-top: 16px;
-  font-family: $montGoogle;
+  font-family: $montBold;
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
