--- a/GoIT/test/OP/src/styles/partials/style.css
+++ b/GoIT/test/OP/src/styles/partials/style.css
@@ -88,7 +88,7 @@
   letter-spacing: 1.13px;
   pointer-events: none; }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1535px) {
   .banner__wrapper {
     max-width: 800px;
     max-height: 478px; }
@@ -106,7 +106,7 @@
     margin-top: 42px;
     margin-bottom: 20px; } }
 
-@media screen and (max-width: 667px) {
+@media screen and (max-width: 1023px) {
   .banner__wrapper {
     position: relative;
     width: 100%;
@@ -141,12 +141,207 @@
   .banner__link__bg {
     width: 216px; } }
 
-@media screen and (max-width: 320px) {
-  .logo__image {
+@media screen and (max-width: 374px) {
+  .banner__logo__image {
     margin-top: 52px; }
-  .title {
+  .banner__title {
+    margin-top: 39px; }
+  .banner__description {
+    margin-top: 17px;
+    max-width: 258px; }
+  .banner__link {
+    width: 200px;
+    margin-top: 15px; } }
+
+.banner1__logo {
+  display: block;
+  margin: 0 auto;
+  margin-top: 85px; }
+
+.banner1__title {
+  margin-top: 32px;
+  color: #a46393;
+  text-align: center;
+  font-family: "Kelson Sans Bold", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 40px; }
+  .banner1__title:before, .banner1__title:after {
+    margin-right: 28px;
+    padding-bottom: 12px;
+    content: "";
+    display: inline-block;
+    height: 5px;
+    width: 34px;
+    background: url(../img/banner1_title_line.svg) no-repeat; }
+  .banner1__title:after {
+    margin-left: 28px;
+    margin-right: 0; }
+
+.banner1__description {
+  width: 450px;
+  margin: 0 auto;
+  margin-top: 10px;
+  color: #4a4a4a;
+  text-align: center;
+  font-family: "Kelson Sans Light", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.banner1__link {
+  display: block;
+  width: 28px;
+  height: 15px;
+  margin: 0 auto;
+  margin-top: 83px;
+  background: url(../img/banner1_link.svg) no-repeat; }
+
+@media screen and (max-width: 1535px) {
+  .banner1__title:before, .banner1__title:after {
+    margin-right: 34px; }
+  .banner1__title:after {
+    margin-left: 34px;
+    margin-right: 0; }
+  .banner1__link {
+    margin-top: 78px; } }
+
+@media screen and (max-width: 1023px) {
+  .banner1__logo {
+    margin-top: 141px; }
+  .banner1__title {
+    width: 264px;
+    margin: 0 auto;
+    margin-top: 31px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px; }
+    .banner1__title:before, .banner1__title:after {
+      content: none; }
+    .banner1__title:after {
+      content: "";
+      display: block;
+      margin: 0 auto;
+      margin-top: 18px; }
+  .banner1__description {
+    margin-top: 12px;
+    width: 272px; }
+  .banner1__description__mobile {
+    display: block; }
+  .banner1__link {
+    margin-top: 111px; } }
+
+@media screen and (max-width: 374px) {
+  .banner1__logo {
+    margin-top: 85px; }
+  .banner1__title {
+    margin-top: 38px; }
+    .banner1__title:after {
+      margin-top: 13px; }
+  .banner1__description {
+    margin-top: 9px;
+    width: 250px; }
+  .banner1__link {
+    margin-top: 90px; } }
+
+.numbers__title {
+  margin-top: 54px;
+  text-align: center;
+  color: #a46393;
+  font-family: "Kelson Sans Bold", sans-serif;
+  font-size: 32px;
+  line-height: 40px; }
+
+.numbers__description {
+  margin-top: 5px;
+  text-align: center;
+  color: #4a4a4a;
+  font-family: "Kelson Sans Light", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 24px; }
+
+.costs {
+  width: 1224px;
+  height: 190px;
+  margin: 0 auto;
+  margin-top: 46px; }
+
+.costs__item {
+  float: left;
+  width: 200px;
+  height: 190px;
+  margin: 0 28px; }
+
+.costs__item:first-child {
+  margin-left: 0; }
+
+.costs__item:last-child {
+  margin-right: 0; }
+
+.costs__item__image {
+  width: 77px;
+  height: 77px;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 1px solid #a46393; }
+
+.costs__item__number {
+  margin-top: 25px;
+  text-align: center;
+  color: #a46393;
+  font-family: "Kelson Sans Bold", sans-serif;
+  font-size: 48px;
+  line-height: 45px; }
+
+.costs__item__title {
+  margin-top: 23px;
+  text-align: center;
+  color: #a46393;
+  font-family: "Kelson Sans Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  line-height: 10px; }
+
+@media screen and (max-width: 1024px) {
+  .numbers__description {
+    margin-top: 9px; }
+  .costs {
+    width: 912px;
+    margin-top: 42px; }
+  .costs__item {
+    float: left;
+    width: 180px;
+    margin: 0 1.5px; } }
+
+@media screen and (max-width: 375px) {
+  .numbers__title {
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 49px; }
+  .numbers__description {
+    margin-top: 16px;
+    font-size: 14px;
+    line-height: 21px; }
+  .costs {
+    width: 100%;
+    height: auto;
+    max-width: 375px;
     margin-top: 35px; }
-  .description {
-    margin-top: 20px; }
-  .link {
-    margin-top: 10px; } }
+  .costs__item {
+    float: none;
+    width: 100%;
+    max-width: 375px;
+    margin: 0 1.5px;
+    margin-top: 34px; }
+  .costs__item:first-child {
+    margin-top: 0; } }
+
+@media screen and (max-width: 320px) {
+  .numbers__title {
+    width: 285px;
+    margin: 0 auto;
+    margin-top: 42px; }
+  .numbers__description {
+    margin-top: 15px; } }
