--- a/GoIT/test/OP/src/styles/partials/style.scss
+++ b/GoIT/test/OP/src/styles/partials/style.scss
@@ -1,6 +1,8 @@
 $KelsonB: 'Kelson Sans Bold', sans-serif;
 $KelsonR: 'Kelson Sans Regular', sans-serif;
 $KelsonL: 'Kelson Sans Light', sans-serif;
+$mainColor: #a46393;
+$textColor: #4a4a4a;
 
 
 /*CLEARFIX*/
@@ -48,7 +50,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
   height: 21px;
   margin: 0 auto;
   margin-top: 15px;
-  color: #a46393;
+  color: $mainColor;
   font-family: $KelsonB;
   font-size: 21px;
   line-height: 21px;
@@ -57,7 +59,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
 .banner__title{
   margin-top: 36px;
   text-align: center;
-  color: #a46393;
+  color: $mainColor;
   font-family: $KelsonB;
   font-size: 32px;
   font-weight: 700;
@@ -68,7 +70,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
   max-width: 736px;
   margin: 0 auto;
   margin-top: 24px;
-  color: #4a4a4a;
+  color: $textColor;
   font-family: $KelsonL;
   font-size: 18px;
   text-align: center;
@@ -84,7 +86,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
 .banner__link__bg{
   width: 224px;
   height: 56px;
-  fill: #a46393;
+  fill: $mainColor;
   cursor:pointer;
 }
 .banner__link__text{
@@ -97,7 +99,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
   pointer-events: none;
 }
 //BANNER DESKTOP
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1535px){
 .banner__wrapper{
   max-width: 800px;
   max-height: 478px;
@@ -122,7 +124,7 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
 }
 }
 //BANNER IPHONE 6
-@media  screen and (max-width: 667px){
+@media  screen and (max-width: 1023px){
 .banner__wrapper{
    position: relative;
    width: 100%;
@@ -164,17 +166,249 @@ $KelsonL: 'Kelson Sans Light', sans-serif;
     width: 216px;
   }
 }
-@media  screen and (max-width: 320px){
-  .logo__image{
+//BANNER IPHONE 5
+@media  screen and (max-width: 374px){
+  .banner__logo__image{
     margin-top: 52px;
   }
-  .title{
+  .banner__title{
+    margin-top: 39px;
+  }
+  .banner__description{
+    margin-top: 17px;
+    max-width: 258px;
+  }
+  .banner__link{
+    width: 200px;
+    margin-top: 15px;
+  }
+}
+//BANNER 1 DESKTOP HD
+.banner1__logo {
+  display: block;
+  margin: 0 auto;
+  margin-top: 85px;
+}
+.banner1__title{
+  margin-top: 32px;
+  color: $mainColor;
+  text-align: center;
+  font-family: $KelsonB;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 40px;
+ &:before, &:after{
+  margin-right: 28px;
+  padding-bottom: 12px;
+  content: "";
+  display: inline-block;
+  height: 5px;
+  width: 34px;
+  background: url(../img/banner1_title_line.svg) no-repeat;
+}
+ &:after{
+  margin-left: 28px;
+  margin-right: 0;
+  }
+}
+.banner1__description{
+  width: 450px;
+  margin: 0 auto;
+  margin-top: 10px;
+  color: $textColor;
+  text-align: center;
+  font-family: $KelsonL;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 24px;
+}
+.banner1__link{
+  display: block;
+  width: 28px;
+  height: 15px;
+  margin: 0 auto;
+  margin-top: 83px;
+  background: url(../img/banner1_link.svg) no-repeat;
+}
+//BANNER 1 DESKTOP
+@media screen and (max-width: 1535px){
+.banner1__title{
+ &:before, &:after{
+  margin-right: 34px;
+}
+ &:after{
+  margin-left: 34px;
+  margin-right: 0;
+  }
+}
+.banner1__link{
+  margin-top: 78px;
+}
+}
+//BANNER IPHONE 6
+@media  screen and (max-width: 1023px){
+.banner1__logo{
+  margin-top: 141px;
+}
+.banner1__title{
+  width: 264px;
+  margin: 0 auto;
+  margin-top: 31px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+ &:before, &:after{
+   content: none;
+ }
+ &:after{
+  content: "";
+  display: block;
+  margin: 0 auto;
+  margin-top: 18px;
+  }
+}
+.banner1__description{
+  margin-top: 12px;
+  width: 272px;
+}
+.banner1__description__mobile{
+  display: block;
+}
+.banner1__link{
+  margin-top: 111px;
+}
+}
+@media  screen and (max-width: 374px){
+  .banner1__logo{
+    margin-top: 85px;
+  }
+  .banner1__title{
+    margin-top: 38px;
+   &:after{
+    margin-top: 13px;
+    }
+  }
+  .banner1__description{
+    margin-top: 9px;
+    width: 250px;
+  }
+  .banner1__link{
+    margin-top: 90px;
+  }
+}
+//NUMBERS DESKTOP HD
+.numbers__title{
+  margin-top: 54px;
+  text-align: center;
+  color: $mainColor;
+  font-family: $KelsonB;
+  font-size: 32px;
+  line-height: 40px;
+}
+.numbers__description{
+  margin-top: 5px;
+  text-align: center;
+  color: $textColor;
+  font-family: $KelsonL;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 24px;
+}
+.costs{
+  width: 1224px;
+  height: 190px;
+  margin: 0 auto;
+  margin-top: 46px;
+}
+.costs__item{
+  float: left;
+  width: 200px;
+  height: 190px;
+  margin: 0 28px;
+}
+.costs__item:first-child{
+  margin-left: 0;
+}
+.costs__item:last-child{
+  margin-right: 0;
+}
+.costs__item__image{
+  width: 77px;
+  height: 77px;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 1px solid $mainColor;
+}
+.costs__item__number{
+  margin-top: 25px;
+  text-align: center;
+  color: $mainColor;
+  font-family: $KelsonB;
+  font-size: 48px;
+  line-height: 45px;
+}
+.costs__item__title{
+  margin-top: 23px;
+  text-align: center;
+  color: $mainColor;
+  font-family: $KelsonR;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  line-height: 10px;
+}
+//NUMBERS DESKTOP
+@media screen and (max-width: 1024px){
+  .numbers__description{
+    margin-top: 9px;
+  }
+  .costs{
+    width: 912px;
+    margin-top: 42px;
+  }
+  .costs__item{
+    float: left;
+    width: 180px;
+    margin: 0 1.5px;
+  }
+}
+//NUMBERS IPHONE 6
+@media screen and (max-width: 375px){
+  .numbers__title{
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 49px;
+  }
+  .numbers__description{
+    margin-top: 16px;
+    font-size: 14px;
+    line-height: 21px;
+  }
+  .costs{
+    width: 100%;
+    height: auto;
+    max-width: 375px;
     margin-top: 35px;
   }
-  .description{
-    margin-top: 20px;
+  .costs__item{
+    float: none;
+    width: 100%;
+    max-width: 375px;
+    margin: 0 1.5px;
+    margin-top: 34px;
   }
-  .link{
-    margin-top: 10px;
+  .costs__item:first-child{
+    margin-top: 0;
+  }
+}
+//NUMBERS IPHONE 5
+@media screen and (max-width: 320px){
+  .numbers__title{
+    width: 285px;
+    margin: 0 auto;
+    margin-top: 42px;
+  }
+  .numbers__description{
+    margin-top: 15px;
   }
 }
